--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stan Lee</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style></style>
 </head>
 <body>
     <div class="container">
-        <h1 class="heading" id="martin">Martin <span>Lieber</span></h1>
+        <h1 class="heading" id="martin">Martin <span id="span1">Lieber</span></h1>
         <div id="img-div">
-            <img src="./img/stanlee.jpg" alt="stan-lee" width="400px">
+            <img src="./img/stanlee.jpg" alt="stan-lee" width="400px" id="image">
             <p id="date">From 1922 to 2018</p>
+        </div>
 
             <p id="info">Stan Lee[1] (born Stanley Martin Lieber /ˈliːbər/; December 28, 1922 – November 12, 2018) was an American comic book writer, editor, publisher, and producer. He rose through the ranks of a family-run business to become Marvel Comics' primary creative leader for two decades, leading its expansion from a small division of a publishing house to a multimedia corporation that dominated the comics industry. which he received an executive producer credit. Meanwhile, he continued independent creative ventures into his 90s, until his death in 2018. Lee attended DeWitt Clinton High School in the Bronx.[9] In his youth, Lee enjoyed writing and entertained dreams of writing the "Great American Novel" one day.[10] He said that in his youth he worked such part-time jobs as writing obituaries for a news service and press releases for the National Tuberculosis Center.</p>
 
@@ -33,11 +37,7 @@
         
             </ul>
             <p id="footer">Read more about Martin Lieber on <a href="https://en.wikipedia.org/wiki/Stan_Lee" target="_blank" id="link">Wikipedia </a> </p>
-        </div>
-
-
-
-
+        
     </div>
 </body>
 </html>
